--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </main>
 
 <main id="main2" class="content">
-  <h2>💬 友達チャット</h2>
+  <span>チャット</span>
   <div id="chat"></div>
   <div id="input">
     <input id="name" placeholder="名前"/>
