--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
 
 <!-- 各メインコンテンツ -->
 <main id="main1" class="content active">
-  ホーム
+  <h1>PicoSite2</h1><br>
+  <p>暇つぶしPicoSiteの、<br>　　　便利バージョンを作りました!!<br>
+  今はチャット、翻訳 等の機能があります。<br>リクエストはどんどん言ってください!</p>
 </main>
 
 <main id="main2" class="content">
