--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
 <!-- 各メインコンテンツ -->
 <main id="main1" class="content active">
-  <h1>PicoSite2</h1><br>
-  <p>暇つぶしPicoSiteの、<br>　　　便利バージョンを作りました!!</p><br>
+  <h1>PicoSite2</h1>
+  <p style="font-size: 80px;">暇つぶしPicoSiteの、<br>　　　便利バージョンを作りました!!</p><br>
 </main>
 
 <main id="main2" class="content">
