--- a/index.html
+++ b/index.html
@@ -23,8 +23,31 @@
 
 <!-- 各メインコンテンツ -->
 <main id="main1" class="content active">
-  <h1>PicoSite2</h1>
-  <p style="font-size: 80px;">暇つぶしPicoSiteの、<br>　　　便利バージョンを作りました!!</p><br>
+  <!-- ホーム画面 -->
+<div id="home-section" class="home">
+  <div class="hero">
+    <h2>ようこそ、PicoSite2へ</h2>
+    <p>Microsoftのように滑らかで直感的なデザイン。<br>
+      シンプルな操作と美しいUIを体験してください。</p>
+    <button id="getStartedBtn">はじめる →</button>
+  </div>
+
+  <div class="feature-grid">
+    <div class="feature">
+      <h4>軽量で高速</h4>
+      <p>必要最小限の構成で素早くロード。</p>
+    </div>
+    <div class="feature">
+      <h4>滑らかなUI</h4>
+      <p>Windows 11のようなやわらかいアニメーション。</p>
+    </div>
+    <div class="feature">
+      <h4>シンプルな構造</h4>
+      <p>カスタマイズしやすく、管理が簡単。</p>
+    </div>
+  </div>
+</div>
+
 </main>
 
 <main id="main2" class="content">
