--- a/index.html
+++ b/index.html
@@ -68,7 +68,15 @@
 </main>
   
 <main id="main3" class="content">
-  翻訳
+  <div class="chat-card">
+    <h2>💬 ChatGPT チャット</h2>
+    <p class="desc">ChatGPTと会話してみましょう。HTMLコードも安全に表示されます。</p>
+
+    <div id="chat-box"></div>
+
+    <textarea id="chat-input" placeholder="メッセージを入力（Shift+Enterで改行）..."></textarea>
+    <button id="chat-send">送信</button>
+  </div>
 </main>
   
 <main id="main4" class="content">
