--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 <div id="home-section" class="home">
   <div class="hero">
     <h2>ようこそ、PicoSite2へ</h2>
-    <p>Microsoftのように滑らかで直感的なデザイン。<br>
-      シンプルな操作と美しいUIを体験してください。</p>
+    <p>PicoSiteを越えた滑らかで直感的なデザイン。<br>
+      シンプルな操作と美しいUIを体験してみてください。</p>
     <button id="getStartedBtn">はじめる →</button>
   </div>
 
@@ -39,11 +39,11 @@
     </div>
     <div class="feature">
       <h4>滑らかなUI</h4>
-      <p>Windows 11のようなやわらかいアニメーション。</p>
+      <p>近未来のようなやわらかいアニメーション。</p>
     </div>
     <div class="feature">
-      <h4>シンプルな構造</h4>
-      <p>カスタマイズしやすく、管理が簡単。</p>
+      <h4>学習に役立てる</h4>
+      <p>勉強できる便利なサイト</p>
     </div>
   </div>
 </div>
