--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <ul>
     <li data-target="main1">ホーム</li>
     <li data-target="main2">チャット</li>
-    <li data-target="main3">翻訳</li>
+    <li data-target="main3">chatGPT</li>
     <li data-target="main4">PicoTube</li>
   </ul>
 </header>
