--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <li data-target="main1">ホーム</li>
     <li data-target="main2">チャット</li>
     <li data-target="main3">chatGPT</li>
-    <li data-target="main4">PicoTube</li>
+    <li data-target="main4">ゲーム</li>
   </ul>
 </header>
 
@@ -81,6 +81,10 @@
   
 <main id="main4" class="content">
   PicoTube
+</main>
+  
+<main id="main4" class="content">
+  ゲーム
 </main>
 </body>
 </html>
