--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <li data-target="main1">ホーム</li>
     <li data-target="main2">チャット</li>
     <li data-target="main3">chatGPT</li>
-    <li data-target="main4">ゲーム</li>
+    <li data-target="main4">PicoTube</li>
+    <li data-target="main5">ゲーム</li>
   </ul>
 </header>
 
