--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <li data-target="main2">チャット</li>
     <li data-target="main3">chatGPT</li>
     <li data-target="main4">PicoTube</li>
-    <li data-target="main5">ゲーム</li>
+    <li data-target="main5">学習ゲーム</li>
   </ul>
 </header>
 
@@ -84,8 +84,140 @@
   PicoTube
 </main>
   
-<main id="main4" class="content">
-  ゲーム
+<main id="main5" class="content">
+<h1>⚔️ 刹那の見切り ⚔️</h1>
+<p>出された問題を誰よりも早く正解せよ！<br>Enterで解答。コンピューターが先に答えたら負け！</p>
+
+<select id="difficulty">
+  <option value="easy">EASY（遅い）</option>
+  <option value="normal" selected>NORMAL</option>
+  <option value="hard">HARD（速い）</option>
+</select>
+
+<canvas id="battle" width="500" height="300"></canvas>
+
+<script>
+const canvas = document.getElementById("battle");
+const ctx = canvas.getContext("2d");
+const difficulty = document.getElementById("difficulty");
+
+let playerInput = "";
+let question = "";
+let correctAnswer = 0;
+let playerWin = null; // true=勝ち false=負け null=進行中
+let cpuTime = 0;
+let cpuTimer = null;
+let started = false;
+
+// 難易度ごとのCPU反応速度（ms）
+const cpuSpeed = {
+  easy: [1800, 2500],
+  normal: [900, 1500],
+  hard: [400, 800]
+};
+
+// 新しい問題を作る
+function newQuestion() {
+  const a = Math.floor(Math.random() * 9) + 1;
+  const b = Math.floor(Math.random() * 20) + 2; // 割られる方（2桁OK）
+  const op = Math.random() < 0.5 ? "×" : "÷";
+
+  if (op === "×") {
+    question = `${a} × ${b}`;
+    correctAnswer = a * b;
+  } else {
+    // 割り切れるようにする
+    const ans = a;
+    const div = b;
+    question = `${a * b} ÷ ${b}`;
+    correctAnswer = ans;
+  }
+
+  playerInput = "";
+  playerWin = null;
+  started = true;
+
+  // CPUタイマー設定
+  const [min, max] = cpuSpeed[difficulty.value];
+  const delay = Math.floor(Math.random() * (max - min) + min);
+  clearTimeout(cpuTimer);
+  cpuTimer = setTimeout(cpuAnswer, delay);
+}
+
+// CPUが答える
+function cpuAnswer() {
+  if (!started) return;
+  playerWin = false; // プレイヤー負け
+  started = false;
+}
+
+// プレイヤーが答える
+document.addEventListener("keydown", (e) => {
+  if (e.key >= "0" && e.key <= "9") {
+    playerInput += e.key;
+  } else if (e.key === "Backspace") {
+    playerInput = playerInput.slice(0, -1);
+  } else if (e.key === "Enter") {
+    if (!started) {
+      newQuestion();
+      return;
+    }
+    if (parseInt(playerInput) === correctAnswer) {
+      playerWin = true;
+      started = false;
+      clearTimeout(cpuTimer);
+    }
+  }
+});
+
+// 描画
+function drawCharacter(x, y, color, face) {
+  ctx.fillStyle = color;
+  ctx.beginPath();
+  ctx.arc(x, y, 30, 0, Math.PI * 2);
+  ctx.fill();
+  ctx.fillStyle = "#fff";
+  ctx.font = "20px sans-serif";
+  ctx.textAlign = "center";
+  ctx.fillText(face, x, y + 7);
+}
+
+function draw() {
+  ctx.clearRect(0, 0, canvas.width, canvas.height);
+
+  // キャラ描画
+  drawCharacter(120, 150, "#4CAF50", "😎"); // プレイヤー
+  drawCharacter(380, 150, "#E53935", "🤖"); // コンピューター
+
+  // 問題
+  ctx.fillStyle = "#fff";
+  ctx.font = "26px sans-serif";
+  ctx.textAlign = "center";
+  ctx.fillText(`問題: ${question}`, 250, 60);
+
+  // プレイヤー入力
+  ctx.font = "22px monospace";
+  ctx.fillText(`あなたの答え: ${playerInput}`, 250, 240);
+
+  // 結果
+  if (playerWin === true) {
+    ctx.fillStyle = "yellow";
+    ctx.font = "28px bold sans-serif";
+    ctx.fillText("🎉 勝ち！", 250, 100);
+  } else if (playerWin === false) {
+    ctx.fillStyle = "red";
+    ctx.font = "28px bold sans-serif";
+    ctx.fillText("💀 負け...", 250, 100);
+  } else if (!started) {
+    ctx.font = "18px sans-serif";
+    ctx.fillText("Enterで開始！", 250, 100);
+  }
+
+  requestAnimationFrame(draw);
+}
+
+draw();
+</script>
 </main>
 </body>
 </html>
