--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
     <button id="retryBtn">もう一度</button>
   </div>
 
-  <audio id="seWin" src="./se_win.mp3"></audio>
-  <audio id="seLose" src="./se_lose.mp3"></audio>
-  <audio id="seHit" src="./se_hit.mp3"></audio>
+  <audio id="seWin" src="./レベルアップ.mp3"></audio>
+  <audio id="seLose" src="./呪いの旋律.mp3"></audio>
+  <audio id="seHit" src="./拳銃を撃つ.mp3"></audio>
 </main>
 </body>
 </html>
