--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
   <ul>
     <li data-target="main1">ホーム</li>
     <li data-target="main2">チャット</li>
+    <li data-target="main5">学習</li>
     <li data-target="main3">chatGPT</li>
     <li data-target="main4">PicoTube</li>
-    <li data-target="main5">学習ゲーム</li>
   </ul>
 </header>
 
@@ -85,30 +85,46 @@
 </main>
   
 <main id="main5" class="content">
-  <h1>刹那の見切り</h1>
-  <canvas id="gameCanvas" width="600" height="400"></canvas>
-
-  <div id="menu">
-    <h2>早打ち計算バトル</h2>
-    <label>敵の強さ：
-      <select id="difficulty">
-        <option value="4000">やさしい</option>
-        <option value="3200" selected>ふつう</option>
-        <option value="2100">はやい</option>
-        <option value="1000">神速</option>
-      </select>
-    </label><br>
-    <button id="startBtn">はじめる</button>
+<div id="app">
+  <!-- スタート画面 -->
+  <div id="select-screen">
+    <h1 id="pd_1">ピコドリルへようこそ！</h1>
+    <p>やりたい問題集を選んでね👇</p>
+    <div id="selectSet"></div>
+    <button id="show-scores" class="option" style="border-color:#555;">
+      最高スコア一覧を表示
+    </button>
   </div>
 
-  <div id="gameover">
-    <h2 id="resultText"></h2>
-    <button id="retryBtn">もう一度</button>
+  <!-- クイズ画面 -->
+  <div id="quiz">
+    <h1 id="set-title"></h1>
+    <div id="question-number"></div>
+    <div id="question"></div>
+    <div id="options" class="options"></div>
+    <div class="progress">
+      <div id="progress-bar" class="progress-bar"></div>
+    </div>
+    <div id="score">スコア: 0</div>
   </div>
 
-  <audio id="seWin" src="./レベルアップ.mp3"></audio>
-  <audio id="seLose" src="./呪いの旋律.mp3"></audio>
-  <audio id="seHit" src="./拳銃を撃つ.mp3"></audio>
+  <!-- 結果画面 -->
+  <div id="result">
+    <h2>おつかれさま！🎉</h2>
+    <p id="final-score"></p>
+    <button id="restart-btn" class="restart">もう一度</button>
+  </div>
+
+  <!-- スコア一覧画面 -->
+  <!-- スコア一覧画面 -->
+  <div id="score-list">
+    <h2>🏆 スコア一覧</h2>
+    <ul id="score-items"></ul>
+    <button id="reset-btn" class="restart" style="background:#e33;">データをリセット</button>
+    <button id="back-btn" class="restart" style="background:#888;">戻る</button>
+  </div>
+
+</div>
 </main>
 </body>
 </html>
