--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
-<title>友達チャット</title>
+<title>PicoSite2</title>
 <script type="module" src="script.js"></script>
 <link rel="stylesheet" href="./style.css">
 </head>
