--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
 <main id="main1" class="content active">
   <!-- ホーム画面 -->
 <div id="home-section" class="home">
+  <button id="loginBtn">Googleでログイン</button>
+  <button id="logoutBtn">ログアウト</button>
+  <p id="status">未ログイン</p>
   <div class="hero">
     <h2>ようこそ、PicoSite2へ</h2>
     <p>PicoSiteを越えた滑らかで直感的なデザイン。<br>
