--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <title>PicoSite2</title>
 <script type="module" src="script.js"></script>
 <link rel="stylesheet" href="./style.css">
+  <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-auth-compat.js"></script>
 </head>
 <body>
 <header id="hd">
