--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 </main>
 
 <main id="main2" class="content">
+<div id="main2_c">
   <span>チャット</span>
   <div id="chat"></div>
   <div id="input">
@@ -70,6 +71,10 @@
     <img class="stamp-btn" src="https://x.gd/Pq0J5" data-url="https://x.gd/Pq0J5">
     <img class="stamp-btn" src="https://x.gd/ojvnt" data-url="https://x.gd/ojvnt">
   </div>
+</div>
+<div id="main2_t">
+  googleでログインしてください
+</div>
 </main>
   
 <main id="main3" class="content">
