--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
   <!-- ホーム画面 -->
 <div id="home-section" class="home">
   <button id="googleLogin">Googleでログイン</button>
+  <button id="logoutBtn">ログアウト</button>
   <div class="hero">
     <h2>ようこそ、PicoSite2へ</h2>
     <p>PicoSiteを越えた滑らかで直感的なデザイン。<br>
