--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
 <main id="main1" class="content active">
   <!-- ホーム画面 -->
 <div id="home-section" class="home">
-  <button id="googleLogin">Googleでログイン</button>
-  <button id="logoutBtn">ログアウト</button>
+<button id="googleLogin" type="button">Googleでログイン</button>
+<button id="logoutBtn" type="button">ログアウト</button>
+
   <div class="hero">
     <h2>ようこそ、PicoSite2へ</h2>
     <p>PicoSiteを越えた滑らかで直感的なデザイン。<br>
