--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
 <meta charset="UTF-8">
 <title>PicoSite2</title>
-<script type="module" src="script.js"></script>
 <link rel="stylesheet" href="./style.css">
   <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-auth-compat.js"></script>
@@ -136,5 +135,7 @@
 
 </div>
 </main>
+  
+<script type="module" src="./script.js"></script>
 </body>
 </html>
