--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
 <main id="main1" class="content active">
   <!-- ホーム画面 -->
 <div id="home-section" class="home">
-<button id="googleLogin" type="button">Googleでログイン</button>
-<button id="logoutBtn" type="button">ログアウト</button>
+<button id="googleLogin">Googleでログイン</button>
+<button id="logoutBtn">ログアウト</button>
+
 
   <div class="hero">
     <h2>ようこそ、PicoSite2へ</h2>
