--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <li data-target="main3">chatGPT</li>
     <li data-target="main4">PicoTube</li>
   </ul>
-  <div id="name">?</div>
+  <div id="you_name">?</div>
 </header>
 
 <!-- 各メインコンテンツ -->
