--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <ul>
     <li data-target="main1">ホーム</li>
     <li data-target="main2">チャット</li>
+    <li data-target="main3">サイト</li>
     <li data-target="main5">学習</li>
-    <li data-target="main3">chatGPT</li>
     <li data-target="main4">PicoTube</li>
   </ul>
   <div style="display: none;" id="you_name">?</div>
@@ -80,15 +80,6 @@
 </main>
   
 <main id="main3" class="content">
-  <div class="chat-card">
-    <h2>💬 ChatGPT チャット</h2>
-    <p class="desc">ChatGPTと会話してみましょう。HTMLコードも安全に表示されます。</p>
-
-    <div id="chat-box"></div>
-
-    <textarea id="chat-input" placeholder="メッセージを入力（Shift+Enterで改行）..."></textarea>
-    <button id="chat-send">送信</button>
-  </div>
 </main>
   
 <main id="main4" class="content">
