--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
     <!-- メイン動画（最初は非表示） -->
     <div id="videoContainer" class="video-container" style="display:none;">
       <button id="backBtn" class="video-btn">← 一覧に戻る</button>
+    <h2 id="videoTitle"></h2>
       <video id="videoPlayer" controls></video>
       <p id="videoNumber"></p>
     </div>
