--- a/index.html
+++ b/index.html
@@ -83,18 +83,18 @@
 </main>
   
 <main id="main4" class="content">
-    <h1>🎬 動画ビューア</h1>
+  <h1>🎬 動画ビューア</h1>
 
-    <!-- 動画一覧 -->
-    <div id="videoList" class="video-list"></div>
+  <!-- 動画一覧 -->
+  <div id="videoList" class="video-list"></div>
 
-    <!-- メイン動画（最初は非表示） -->
-    <div id="videoContainer" class="video-container" style="display:none;">
-      <button id="backBtn" class="video-btn">← 一覧に戻る</button>
+  <!-- メイン動画（最初は非表示） -->
+  <div id="videoContainer" class="video-container" style="display:none;">
+    <button id="backBtn" class="video-btn">← 一覧に戻る</button>
     <h2 id="videoTitle"></h2>
-      <video id="videoPlayer" controls></video>
-      <p id="videoNumber"></p>
-    </div>
+    <iframe id="videoPlayer" width="100%" height="480" frameborder="0" allowfullscreen></iframe>
+  </div>
+
 </main>
   
 <main id="main5" class="content">
