--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 </main>
   
 <main id="main4" class="content">
-  <h1>🎬 動画ビューア</h1>
+  <h1>PicoTube</h1>
 
   <!-- 動画一覧 -->
   <div id="videoList" class="video-list"></div>
