--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 <main id="main1" class="content active">
   <!-- ホーム画面 -->
 <div id="home-section" class="home">
-<button id="googleLogin">Googleでログイン</button>
-<button id="logoutBtn">ログアウト</button>
+<button class="btn1" id="googleLogin">Googleでログイン</button>
+<button class="btn1" id="logoutBtn">ログアウト</button>
 
 
   <div class="hero">
