--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <header id="hd">
-  <div class="menu-toggle">
+  <div class="menu-toggle" id="menu-toggle">
     <span></span>
     <span></span>
     <span></span>
