--- a/index.html
+++ b/index.html
@@ -173,6 +173,20 @@
     <article class="tabContent" id="content_2">
     </article>
     <article class="tabContent" id="content_3">
+      <div class="preview-area">
+        <div class="preview-area2">
+          <div class="preview card">
+            <strong style="margin-bottom:8px; display:block;">SVGそのままで</strong>
+            <div id="svgWrap"></div>
+            <small>※ テキストは後から乗せる想定</small>
+            <br><br>
+            <button id="downloadsvg" class="secondary">PNGで保存</button>
+          </div>
+        </div>
+
+        <div class="preview-area2">
+        </div>
+      </div>
     </article>
   </div>
 </div>
