Add textarea for SVG code input

--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@
             <strong style="margin-bottom:8px; display:block;">SVGそのままで</strong>
             <div id="svgWrap"></div>
             <small>※ テキストは後から乗せる想定</small>
+            <textarea id="svg_code"></textarea>
             <br><br>
             <button id="downloadsvg" class="secondary">PNGで保存</button>
           </div>
