--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
           <div class="preview card">
             <strong style="margin-bottom:8px; display:block;">SVGそのままで</strong>
             <div id="svgWrap"></div>
-            <small>※ テキストは後から乗せる想定</small>
+            <small>※'stroke','fill','strokeWidth','variant',<br>'ratio','ratio2','base','rough','shadow'<br>を使ってね</small>
             <textarea id="svg_code"></textarea>
             <br><br>
             <button id="downloadsvg" class="secondary">PNGで保存</button>
