--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
           <div class="preview card">
             <strong style="margin-bottom:8px; display:block;">SVGそのままで</strong>
             <div id="svgWrap"></div>
-            <small>※'stroke','fill','strokeWidth','variant',<br>'ratio','ratio2','base','rough','shadow'<br>を使ってね</small>
-            <textarea id="svg_code"></textarea>
+            <small>※'stroke','fill','strokeWidth','variant',<br>'ratio','ratio2','base','rough','shadow'<br>を使ってね</small><br>
+            <textarea id="svg_code" style="width: 40%;"></textarea>
             <br><br>
             <button id="downloadsvg" class="secondary">PNGで保存</button>
           </div>
