--- a/index.html
+++ b/index.html
@@ -167,6 +167,14 @@
             <br><br>
             <button id="downloadBox" class="secondary">PNGで保存</button>
           </div>
+          
+          <div class="preview card">
+            <strong style="margin-bottom:8px; display:block;">半透明</strong>
+            <div id="toumeiWrap"></div>
+            <small>※ いろいろできる半透明</small>
+            <br><br>
+            <button id="downloadtoumei" class="secondary">PNGで保存</button>
+          </div>
         </div>
       </div>
     </article>
