Update transparency message and add input field

--- a/index.html
+++ b/index.html
@@ -171,7 +171,8 @@
           <div class="preview card">
             <strong style="margin-bottom:8px; display:block;">半透明</strong>
             <div id="toumeiWrap"></div>
-            <small>※ いろいろできる半透明</small>
+            <small>※ いろいろできる半透明<br>透明度</small><br>
+            <input type="number" name="toumeido" id="toumeido">
             <br><br>
             <button id="downloadtoumei" class="secondary">PNGで保存</button>
           </div>
