--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             <strong style="margin-bottom:8px; display:block;">半透明</strong>
             <div id="toumeiWrap"></div>
             <small>※ いろいろできる半透明<br>透明度</small><br>
-            <input type="number" min="0" max="100" name="toumeido" id="toumeido">
+            <input type="number" value="50" min="0" max="100" name="toumeido" id="toumeido">
             <br><br>
             <button id="downloadtoumei" class="secondary">PNGで保存</button>
           </div>
