--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <main id="main2" class="content">
   <span>チャット</span>
   <div id="chat"></div>
-<div id="main2_c">
+<!-- チャットここなら正常にできる <div id="main2_c"> -->
   <div id="input">
     <input id="name" placeholder="名前"/>
     <input id="text" placeholder="メッセージを入力..." />
@@ -73,6 +73,7 @@
     <img class="stamp-btn" src="https://x.gd/Pq0J5" data-url="https://x.gd/Pq0J5">
     <img class="stamp-btn" src="https://x.gd/ojvnt" data-url="https://x.gd/ojvnt">
   </div>
+<div id="main2_c">
 </div>
 <div id="main2_t">
   googleでログインしてください
